Since all child have correct height, we can remove the double scrollbar.

--- a/app/stylesheets/application.css
+++ b/app/stylesheets/application.css
@@ -105,8 +105,6 @@ header {
   background: linear-gradient(to bottom, rgba(144,110,169,0.9) 0%,rgba(193,128,170,1) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#906ea9', endColorstr='#00c180aa',GradientType=0 );
   padding: 50px 10%;
-  height: 100%;
-  overflow : auto;
 
   @media(max-width: 720px){
     & {
